lesson section done

--- a/index.html
+++ b/index.html
@@ -79,9 +79,16 @@
 
     <section class="mx-auto">
         <h2 class="text-4xl font-bold mb-6 text-center"><span class="text-sky-500">Let's</span> Learn Vocabularies</h2>
-        <div id="lesson-container" class="flex space-x-4 justify-center mb-6">
+        <div id="lesson-container" class="flex flex-wrap gap-4 justify-center mb-6">
 
         </div>
+    </section>
+    <section id="lesson-word" class="bg-gray-100 w-11/12 mx-auto mb-8 p-10 grid grid-cols-3 gap-5">
+        <div class="text-center col-span-full space-y-5 font-bangla py-4">
+            <p class="text-gray-400 text-xl">আপনি এখনো কোন Lesson Select করেন নি</p>
+            <h1 class="text-4xl font-bold">একটি Lesson Select করুন।</h1>
+        </div>
+
     </section>
     <script src="script.js"></script>
   </body>
