--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
       type="text/css"
     />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
+    <!-- External CSS -->
+     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
@@ -83,13 +86,43 @@
 
         </div>
     </section>
-    <section id="lesson-word" class="bg-gray-100 w-11/12 mx-auto mb-8 p-10 grid grid-cols-3 gap-5">
+    <section id="lesson-word" class="bg-gray-100 w-11/12 mx-auto mb-8 p-10 grid grid-cols-1 md:grid-cols-3 gap-5">
         <div class="text-center col-span-full space-y-5 font-bangla py-4">
             <p class="text-gray-400 text-xl">আপনি এখনো কোন Lesson Select করেন নি</p>
             <h1 class="text-4xl font-bold">একটি Lesson Select করুন।</h1>
         </div>
 
     </section>
+
+<!-- Open the modal using ID.showModal() method -->
+<!-- <button class="btn" onclick="my_modal_5.showModal()">open modal</button> -->
+<dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
+  <div id="details-container" class="modal-box space-y-4 p-4">
+    <h2 class="text-3xl font-bangla font-bold">Eager (<i class="fa-solid fa-microphone-lines"></i>:ইগার)</h2>
+    <div>
+        <h3 class="font-semibold text-xl">Meaning</h3>
+        <p>আগ্রহী</p>
+    </div>
+    <div>
+        <h3 class="font-semibold text-xl">Example</h3>
+        <p class="text-gray-400">The kids were eager to open their gifts</p>
+    </div>
+    <div>
+        <h3 class="text-xl font-bangla">সমার্থক শব্দ গুলো</h3>
+        <span class="bg-[#D7E4EF] p-3">Enthusiastic</span>
+        <span class="bg-[#D7E4EF] p-3">Enthusiastic</span>
+        <span class="bg-[#D7E4EF] p-3">Enthusiastic</span>
+    </div>
+    
+    <div class="modal-action">
+      <form method="dialog">
+        <!-- if there is a button in form, it will close the modal -->
+        <button class="btn">Close</button>
+      </form>
+    </div>
+  </div>
+</dialog>
+
     <script src="script.js"></script>
   </body>
 </html>
