--- a/index.html
+++ b/index.html
@@ -79,13 +79,18 @@
             <img src="./assets/hero-student.png" alt="">
         </div>
     </section>
-
+  
     <section class="mx-auto">
         <h2 class="text-4xl font-bold mb-6 text-center"><span class="text-sky-500">Let's</span> Learn Vocabularies</h2>
         <div id="lesson-container" class="flex flex-wrap gap-4 justify-center mb-6">
 
         </div>
     </section>
+    <!-- spinner -->
+   <section id="spinner" class="flex justify-center items-center py-10 hidden">
+    <span class="loading loading-bars loading-xl"></span>
+   </section>
+
     <section id="lesson-word" class="bg-gray-100 w-11/12 mx-auto mb-8 p-10 grid grid-cols-1 md:grid-cols-3 gap-5">
         <div class="text-center col-span-full space-y-5 font-bangla py-4">
             <p class="text-gray-400 text-xl">আপনি এখনো কোন Lesson Select করেন নি</p>
@@ -98,21 +103,7 @@
 <!-- <button class="btn" onclick="my_modal_5.showModal()">open modal</button> -->
 <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
   <div id="details-container" class="modal-box space-y-4 p-4">
-    <h2 class="text-3xl font-bangla font-bold">Eager (<i class="fa-solid fa-microphone-lines"></i>:ইগার)</h2>
-    <div>
-        <h3 class="font-semibold text-xl">Meaning</h3>
-        <p>আগ্রহী</p>
-    </div>
-    <div>
-        <h3 class="font-semibold text-xl">Example</h3>
-        <p class="text-gray-400">The kids were eager to open their gifts</p>
-    </div>
-    <div>
-        <h3 class="text-xl font-bangla">সমার্থক শব্দ গুলো</h3>
-        <span class="bg-[#D7E4EF] p-3">Enthusiastic</span>
-        <span class="bg-[#D7E4EF] p-3">Enthusiastic</span>
-        <span class="bg-[#D7E4EF] p-3">Enthusiastic</span>
-    </div>
+   
     
     <div class="modal-action">
       <form method="dialog">
